--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 	<div class="pageTop  sticky-top">
 		<div class="displayPageTop">
 			<a href="tel:+32486253632">
-				<span class="accentColor"><i class="fa-solid fa-phone"></i></span> 0486 25 36 3
+				<span class="accentColor"><i class="fa-solid fa-phone"></i></span> 0486 25 36 32
 			</a>
 			<div class="float-end">
 			<a href="mailto:info@decor-art.be">
@@ -97,8 +97,8 @@
 
             <div class="row">
                 <div class="col">
-                    <span class="accentColor">Contacteer</span> ons
-					<br /> voor een vrijblijvend <span class="accentColor">offerte!</span>
+                    Contacteer ons
+					<br /> voor een vrijblijvend offerte!
 					<br />
                 </div>
             </div>
@@ -134,10 +134,10 @@
 
     <div class="container">
         <div class="disclaimer">
-            <h5>&copy; 2022 HAVOLLI BV</h5>
-			<h5>BTW BE 0746.795.674</h5>
+            <h5>&copy; 2022 Art Decor</h5>
+			<h5>BTW BE 0752.709.013</h5>
             <br />
-            <a href="www.proventus.be"><img class="proventus" src="./assets/img/proventus.png"></a>
+            <a href="www.proventus.be"><img class="proventus" src="./assets/img/websiteBy.png"></a>
         </div>
     </div>
 
