--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="pageTop  sticky-top">
 		<div class="displayPageTop">
 			<a href="tel:+32486253632">
-				<span class="accentColor"><i class="fa-solid fa-phone"></i></span> 0486 25 36 3
+				<span class="accentColor"><i class="fa-solid fa-phone"></i></span> 0486 25 36 32
 			</a>
 			<div class="float-end">
 			<a href="mailto:info@decor-art.be">
@@ -58,7 +58,7 @@
 			<div class="row">
 				<div class="col">
 					<h1>Art Decor</h1>
-					<span style="color: white"><h2> Schilder -en renovatiewerken </h2></span>
+					<h2> Schilder -en renovatiewerken </h2>
 					<a href="contact.html" class="myButton">vrijblijvend offerte</a>
 				</div>
 			</div>
@@ -134,8 +134,8 @@
 
             <div class="row">
                 <div class="col">
-                    <span class="accentColor">Contacteer</span> ons
-					<br /> voor een vrijblijvend <span class="accentColor">offerte!</span>
+                    Contacteer ons
+					<br /> voor een vrijblijvend offerte!
 					<br />
                 </div>
             </div>
@@ -161,11 +161,6 @@
 					
 				</div>
             </div>
-            <div class="row">
-                <div class="col">
-                    
-                </div>
-            </div>
         </div>
     </div>
 
@@ -174,7 +169,7 @@
             <h5>&copy; 2022 Art Decor</h5>
 			<h5>BTW BE 0752.709.013</h5>
             <br />
-            <a href="www.proventus.be"><img class="proventus" src="./assets/img/proventus.png"></a>
+            <a href="www.proventus.be"><img class="proventus" src="./assets/img/websiteBy.png"></a>
         </div>
     </div>
 
