--- a/gallery.html
+++ b/gallery.html
@@ -158,6 +158,22 @@
 					</div>
 				  </div>
 				</div>
+				<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+				  <div class="img-wrapper">
+					<a href="assets/img/13.jpg"><img src="assets/img/13.jpg" class="img-responsive"></a>
+					<div class="img-overlay">
+					  <i class="fa fa-plus-circle" aria-hidden="true"></i>
+					</div>
+				  </div>
+				</div>
+				<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
+				  <div class="img-wrapper">
+					<a href="assets/img/14.jpg"><img src="assets/img/14.jpg" class="img-responsive"></a>
+					<div class="img-overlay">
+					  <i class="fa fa-plus-circle" aria-hidden="true"></i>
+					</div>
+				  </div>
+				</div>
 			  </div>
 			</div>
 		  </div>
